reveal modal angepasst

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 
     <p class="lead">Informationen für den Admin Bereich</p>
 
-    <p><input id="login-username" required="true" type="text" placeholder="Teamname"/> <input
-            id="login-password" required="true"
-            placeholder="Passwort"/>
+    <p><input id="input-team-name" required="true" type="text" placeholder="Teamname"/>
+        <input id="input-admin-pw" required="true" type="password"
+               placeholder="Admin Passwort"/>
     </p>
 
     <p class="lead">Sonstige Benutzergruppen</p>
 
-    <p><input id="input-player-pw" required="true" type="text" onfocus="this.value=''" value="Spielerpasswort"/></p>
+    <p><input id="input-player-pw" required="true" type="password" placeholder="Spielerpasswort"/></p>
 
-    <p><input id="input-manager-pw" required="true" type="text" onfocus="this.value=''" value="Verwalterpasswort"/></p>
+    <p><input id="input-manager-pw" required="true" type="password" placeholder="Verwalterpasswort"/></p>
     <button id="button-create-team">Team anlegen</button>
     <a class="close-reveal-modal">&#215;</a>
 </div>
