--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="right">
-
+                <li id="button-logout" class="button">Logout</li>
             </ul>
             <!--Left Nav Section-->
             <ul class="left">
