Mannschaftsname wird bei erstellen gespeichert link auf team in index eingefügt

--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
     <a class="button" href="#" data-reveal-id="modal-create-team">Team anlegen</a>
 </div>
 
+<div class="row">
+    <div class="large-12 columns">
+        <a href="team.html">hier gehts zum team</a>
+    </div>
+</div>
+
 <!--team erstellen modal------------------------------------------------------------------------------------------------>
-
-
 <div id="modal-create-team" class="reveal-modal" data-reveal>
     <h2>Erstellen Sie ihr eigenes Team</h2>
 
