--- a/team.html
+++ b/team.html
@@ -10,14 +10,38 @@
     <script src="foundation-js/modernizr.js"></script>
 </head>
 <body>
+<div class="fixed">
+    <nav class="top-bar" data-topbar role="navigation">
+        <ul class="title-area">
+            <li class="name">
+                <h1><a href="#">Top Team</a></h1>
+            </li>
+            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+        </ul>
+
+        <section class="top-bar-section">
+            <!-- Right Nav Section -->
+            <ul class="right">
+                <li id="button-logout" class="button">Logout</li>
+            </ul>
+            <!--Left Nav Section-->
+            <ul class="left">
+                <!--<li class=""><a href="#">Training</a></li>-->
+            </ul>
+        </section>
+    </nav>
+</div>
+<!--End of navbar-------------------------------------------------------------------------------------------------------->
+
+
 <div class="row">
-    <div class="large-6 columns">
-    <a class="button" href="#" data-reveal-id="modal-add-player">Spieler hinzufügen</a>
+    <a class="button large-12 columns small-12" href="#" data-reveal-id="modal-add-player">Spieler hinzufügen</a>
 </div>
-    <div class="large-6 columns">
-        <a class="button" href="#" data-reveal-id="modal-add-training">Training anlegen</a>
-    </div>
-</div>
+<!--<div class="row">-->
+<!--<a class="button large-12 columns small-12" href="#" data-reveal-id="modal-add-training">Training hinzufügen</a>-->
+
+<!--</div>-->
 
 <!-- player-container -------------------------------------------------------------------------------------------------------->
 <div class="row">
