--- a/trainer.html
+++ b/trainer.html
@@ -23,11 +23,12 @@
         <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="right">
-                <li id="button-logout" class="button">Logout</li>
+                <li><a id="button-logout" class="button">Logout</a></li>
             </ul>
             <!--Left Nav Section-->
             <ul class="left">
-
+                <li><a class="button" href="training.html">Training</a></li>
+                <li><a class="button" href="team.html">Spielerkader</a></li>
             </ul>
         </section>
     </nav>
@@ -35,13 +36,14 @@
 <!--End of navbar-------------------------------------------------------------------------------------------------------->
 
 
-<div class="row">
-    <a class="button large-12 columns small-12" href="team.html">Spielerkader</a>
-</div>
-<div class="row">
-    <a class="button large-12 columns small-12" href="training.html">Training</a>
+<!--<div class="row">-->
+<!--<a class="button large-12 columns small-12" href="team.html">Spielerkader</a>-->
+<!--</div>-->
+<!--<div class="row">-->
+<!--<a class="button large-12 columns small-12" href="training.html">Training</a>-->
 
-</div>
+<!--</div>-->
+<div style="background: pink; height: 300px">Trainer dummy container</div>
 
 
 <script src="js/jquery-2.1.1.min.js"></script>
