--- a/team.html
+++ b/team.html
@@ -23,11 +23,13 @@
         <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="right">
-                <li id="button-logout" class="button">Logout</li>
+                <li><a id="button-logout" class="button">Logout</a></li>
             </ul>
             <!--Left Nav Section-->
             <ul class="left">
-                <!--<li class=""><a href="#">Training</a></li>-->
+
+                <li><a class="button" href="training.html">Training</a></li>
+                <!--<li><a class="button" href="team.html">Spielerkader</a></li>-->
             </ul>
         </section>
     </nav>
