--- a/training.html
+++ b/training.html
@@ -23,25 +23,22 @@
         <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="right">
-                <li id="button-logout" class="button">Logout</li>
+                <li><a id="button-logout" class="button">Logout</a></li>
             </ul>
             <!--Left Nav Section-->
             <ul class="left">
-                <!--<li class=""><a href="#">Training</a></li>-->
+                <!--<li><a class="button" href="training.html">Training</a></li>-->
+                <li><a class="button" href="team.html">Spielerkader</a></li>
             </ul>
         </section>
     </nav>
 </div>
 <!--End of navbar-------------------------------------------------------------------------------------------------------->
 
-
 <div class="row">
-    <a class="button large-12 columns small-12" href="#" data-reveal-id="modal-add-player">Spieler hinzufügen</a>
-</div>
-<!--<div class="row">-->
-<!--<a class="button large-12 columns small-12" href="#" data-reveal-id="modal-add-training">Training hinzufügen</a>-->
+    <a class="button large-12 columns small-12" href="#" data-reveal-id="modal-add-training">Training hinzufügen</a>
 
-<!--</div>-->
+</div>
 
 <!-- player-container -------------------------------------------------------------------------------------------------------->
 <div class="row">
@@ -49,8 +46,9 @@
         <table id="training-table">
             <thead>
             <tr>
-                <th width="200" id="player-icon">Datum</th>
-                <th width="150" id="player-name">Anzahl der Spieler</th>
+                <th id="training-date">Datum</th>
+                <th id="training-time">Uhrzeit</th>
+                <th id="training-player-number">Anzahl der Spieler</th>
             </tr>
             </thead>
             <tbody>
@@ -68,11 +66,36 @@
     <a class="close-reveal-modal">&#215;</a>
 </div>
 
+
+<!--Spieler zu Tr hinzufügen modal------------------------------------------------------------------------------------------------>
+<div id="modal-add-player-to-tr" class="reveal-modal" data-reveal>
+    <h2>Fügen Sie Spieler durch markieren zum Training hinzu!</h2>
+
+    <!-- player-container -------------------------------------------------------------------------------------------------------->
+    <div class="row">
+        <div class="large-12 columns" id="player-container">
+            <table id="player-modal-table">
+                <thead>
+                <tr>
+                    <th id="player-icon">Spieler Avatar</th>
+                    <th id="player-name">Spieler Name</th>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <button id="button-add-player-to-tr">Training anlegen</button>
+    <a class="close-reveal-modal">&#215;</a>
+</div>
+
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="foundation-js/foundation.min.js"></script>
 <script>
     $(document).foundation();
 </script>
 <script src="js/Team.js"></script>
+<script src="js/training.js"></script>
 </body>
 </html>
