--- a/training.html
+++ b/training.html
@@ -71,6 +71,9 @@
 <div id="modal-add-player-to-tr" class="reveal-modal" data-reveal>
     <h2>Fügen Sie Spieler durch markieren zum Training hinzu!</h2>
 
+    <h3 id="header-date"></h3>
+
+    <h3 id="player-count"></h3>
     <!-- player-container -------------------------------------------------------------------------------------------------------->
     <div class="row">
         <div class="large-12 columns" id="player-container">
@@ -86,7 +89,7 @@
             </table>
         </div>
     </div>
-    <button id="button-add-player-to-tr">Training anlegen</button>
+    <!--<button id="button-add-player-to-tr">Training anlegen</button>-->
     <a class="close-reveal-modal">&#215;</a>
 </div>
 
