Avatar für Vorstellung mit reingewixxt

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <p><input id="input-player-pw" required="true" type="password" placeholder="Spielerpasswort"/></p>
 
     <p><input id="input-manager-pw" required="true" type="password" placeholder="Verwalterpasswort"/></p>
-    <button id="button-create-team">Team anlegen</button>
+    <button id="button-create-team">Neues Team anlegen</button>
     <a class="close-reveal-modal">&#215;</a>
 </div>
 
