--- a/training.html
+++ b/training.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="de">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width"/>
     <title>Top Team</title>
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css"/>
@@ -36,7 +37,8 @@
 <!--End of navbar-------------------------------------------------------------------------------------------------------->
 
 <div class="row">
-    <a class="button large-12 columns small-12" href="#" data-reveal-id="modal-add-training">Training hinzufügen</a>
+    <a class="button large-12 columns medium-12 small-12" href="#" data-reveal-id="modal-add-training">Training
+        hinzufügen</a>
 
 </div>
 
