--- a/team.html
+++ b/team.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="de">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width"/>
     <title>Top Team</title>
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css"/>
