--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="right">
-                <li><a id="button-logout" class="button">Logout</a></li>
+                <li><a href="index.html" id="button-logout" class="button">Logout</a></li>
             </ul>
             <!--Left Nav Section-->
             <ul class="left">
