--- a/training.html
+++ b/training.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/app.css"/>
     <script src="foundation-js/modernizr.js"></script>
+    <script src="js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="js/chart.js"></script>
 </head>
 <body>
 <div class="fixed">
@@ -59,6 +62,9 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="large-12 columns" id="chart_div"></div>
+</div>
 <!--Training  anlegen modal------------------------------------------------------------------------------------------------>
 <div id="modal-add-training" class="reveal-modal" data-reveal>
     <h2>Neues Training anlegen</h2>
@@ -95,7 +101,6 @@
     <a class="close-reveal-modal">&#215;</a>
 </div>
 
-<script src="js/jquery-2.1.1.min.js"></script>
 <script src="foundation-js/foundation.min.js"></script>
 <script>
     $(document).foundation();
