--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="row">
                     <!--<div class="large-1 small-12 columns">-->
                     <select id="select-role" class="large-12 small-12 medium-12 columns">
-                    <option value="1">Trainer</option>
+                        <option value="1">Trainer</option>
                         <option value="2">Verwalter</option>
                         <option value="3">Spieler</option>
                     </select>
@@ -99,6 +99,20 @@
 
     <p><input id="input-manager-pw" required="true" type="password" placeholder="Verwalterpasswort"/></p>
     <button id="button-create-team">Neues Team anlegen</button>
+    <a class="close-reveal-modal">&#215;</a>
+</div>
+
+<div id="modal-existing-team" class="reveal-modal" data-reveal>
+    <h2>Es Existiert bereits ein Verein mit diesem Teamnamen oder dieser E-mail-Adresse.</h2>
+
+    <p class="lead">Haben Sie Ihr Passwort vergessen?</p>
+
+    <div class="row">
+        <a id="button-forgotten-pw-modal" class="large-6 small-6 columns" href="#"
+           data-reveal-id="modal-reset-pw">Passwort wiederherstellen</a>
+
+        <button id="button-close-modal" class="large-3 small-3 large-offset-2 small-offset-2 columns">OK</button>
+    </div>
     <a class="close-reveal-modal">&#215;</a>
 </div>
 
