Funktionalität für context menü eingebaut

--- a/training.html
+++ b/training.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="jquery-ui/jquery.contextMenu.css"/>
     <script src="foundation-js/modernizr.js"></script>
     <script src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="js/chart.js"></script>
+    <script type="text/javascript" src="jquery-ui/jquery.contextMenu.js"></script>
+    <script type="text/javascript" src="jquery-ui/jquery.ui.position.js"></script>
 </head>
 <body>
 <div class="fixed">
@@ -43,6 +46,10 @@
     <a class="button large-12 columns medium-12 small-12" href="#" data-reveal-id="modal-add-training">Training
         hinzufügen</a>
 
+</div>
+
+<div class="context-menu-one box menu-1">
+    <strong>right click me</strong>
 </div>
 
 <!-- player-container -------------------------------------------------------------------------------------------------------->
