HomeButton in Navbar linkt auf index.html Chart kann jetzt Datum anzeigen und sortiert

--- a/training.html
+++ b/training.html
@@ -13,8 +13,6 @@
     <script src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="js/chart.js"></script>
-    <script type="text/javascript" src="jquery-ui/jquery.contextMenu.js"></script>
-    <script type="text/javascript" src="jquery-ui/jquery.ui.position.js"></script>
 </head>
 <body>
 <div class="fixed">
@@ -105,10 +103,12 @@
         </div>
     </div>
     <!--<button id="button-add-player-to-tr">Training anlegen</button>-->
-    <a class="close-reveal-modal">&#215;</a>
+    <a class="close-reveal-modal" id="close-player-addition-modal">&#215;</a>
 </div>
 
 <script src="foundation-js/foundation.min.js"></script>
+<script type="text/javascript" src="jquery-ui/jquery.contextMenu.js"></script>
+<script type="text/javascript" src="jquery-ui/jquery.ui.position.js"></script>
 <script>
     $(document).foundation();
 </script>
