--- a/team.html
+++ b/team.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="jquery-ui/jquery.contextMenu.css"/>
     <script src="foundation-js/modernizr.js"></script>
 </head>
 <body>
@@ -76,6 +77,8 @@
 
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="foundation-js/foundation.min.js"></script>
+<script type="text/javascript" src="jquery-ui/jquery.contextMenu.js"></script>
+<script type="text/javascript" src="jquery-ui/jquery.ui.position.js"></script>
 <script>
     $(document).foundation();
 </script>
