spieler kann aus Spielerliste gelöscht werden

--- a/training.html
+++ b/training.html
@@ -46,8 +46,8 @@
 
 </div>
 
-<div class="context-menu-one box menu-1">
-    <strong>right click me</strong>
+<div>
+<strong>right click me</strong>
 </div>
 
 <!-- player-container -------------------------------------------------------------------------------------------------------->
