playerName in placeholder modal reinwixen

--- a/team.html
+++ b/team.html
@@ -76,7 +76,7 @@
     <div class="row">
         <div class="row">
             <img id="image-player" src="img/avatar.jpg" class="large-4 columns">
-            <input id="input-player-name" class="large-3 columns large-offset-2" required="true"
+            <input class="input-player-name large-3 columns large-offset-2" required="true"
                    placeholder="Vorname Nachname"/>
         </div>
         <div class="row">
@@ -98,7 +98,7 @@
                 <img id="image-player-small" src="img/avatar.jpg" class="small-12 columns">
             </div>
             <div class="row">
-                <input id="input-player-name-small" class="small-12 medium-12 columns" required="true"
+                <input class="input-player-name small-12 medium-12 columns" required="true"
                        placeholder="Vorname Nachname"/>
             </div>
             <div class="row">
