playerName in placeholder modal reinwixen

--- a/team.html
+++ b/team.html
@@ -82,7 +82,7 @@
         <div class="row">
             <div class="large-12 columns">
                 <button id="button-delete-player" class="large-3 columns large-offset-5">Spieler löschen</button>
-                <button id="button-save-changes" class="large-3 columns">Änderungen speichern</button>
+                <button class="button-save-changes large-3 columns">Änderungen speichern</button>
             </div>
         </div>
         <a class="close-reveal-modal">&#215;</a>
@@ -106,7 +106,7 @@
                 </button>
             </div>
             <div class="row">
-                <button id="button-save-changes-small" class="small-12 medium-12 columns">Änderungen speichern
+                <button class="button-save-changes small-12 medium-12 columns">Änderungen speichern
                 </button>
             </div>
         </div>
