Spieler kann gelöscht werden modal wird auch für large-up angezeigt

--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
 </div>
 
 <!--spieler bearbeiten modal------------------------------------------------------------------------------------------------>
-<div id="modal-change-player-large" class="reveal-modal modal-change-player show-for-large" data-reveal>
+<div id="modal-change-player-large" class="reveal-modal modal-change-player show-for-large-up" data-reveal>
     <h2>Spieler bearbeiten</h2>
 
     <div class="row">
@@ -81,7 +81,7 @@
         </div>
         <div class="row">
             <div class="large-12 columns">
-                <button id="button-delete-player" class="large-3 columns large-offset-5">Spieler löschen</button>
+                <button id="button-delete-player" class=" button-delete-player large-3 columns large-offset-5">Spieler löschen</button>
                 <button class="button-save-changes large-3 columns">Änderungen speichern</button>
             </div>
         </div>
@@ -102,7 +102,7 @@
                        placeholder="Vorname Nachname"/>
             </div>
             <div class="row">
-                <button id="button-delete-player-small" class="small-12 medium-12 columns">Spieler löschen
+                <button id="button-delete-player-small" class="button-delete-player small-12 medium-12 columns">Spieler löschen
                 </button>
             </div>
             <div class="row">
