upload geht theoretisch

--- a/team.html
+++ b/team.html
@@ -85,6 +85,12 @@
                 <button class="button-save-changes large-3 columns">Änderungen speichern</button>
             </div>
         </div>
+        <form id="fileupload" name="fileupload" enctype="multipart/form-data" method="post">
+            <fieldset>
+                <input type="file" name="fileselect" id="fileselect">
+                <input id="uploadbutton" type="button" value="Upload to Parse"/>
+            </fieldset>
+        </form>
         <a class="close-reveal-modal">&#215;</a>
     </div>
 </div>
