Bilder werden auch im Spieler Detail-Modal angezeigt

--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
 
     <div class="row">
         <div class="row">
-            <img id="image-player" src="img/avatar.jpg" class="large-4 columns">
+            <img id="image-player" class="img-player" src="img/avatar.jpg" class="large-4 columns">
             <input id="input-player-name-big" class="input-player-name large-3 columns large-offset-2" required="true"
                    placeholder="Vorname Nachname"/>
         </div>
@@ -101,7 +101,7 @@
     <div class="row">
         <div class="small-12 medium-12 columns">
             <div class="row">
-                <img id="image-player-small" src="img/avatar.jpg" class="small-12 columns">
+                <img id="image-player-small" class="img-player" src="img/avatar.jpg" class="small-12 columns">
             </div>
             <div class="row">
                 <input id="input-player-name-small" class="input-player-name small-12 medium-12 columns" required="true"
