spieler anzahl wird im modal angezeigt

--- a/training.html
+++ b/training.html
@@ -80,13 +80,16 @@
 <div id="modal-add-player-to-tr" class="reveal-modal" data-reveal>
     <h2>Fügen Sie Spieler durch markieren zum Training hinzu!</h2>
 
-    <h3 id="header-date"></h3>
-
-    <h3 id="player-count"></h3>
+    <div class="row">
+        <div class="large-12 columns">
+            <div id="header-date"></div>
+            <div id="player-count"></div>
+        </div>
+    </div>
     <!-- player-container -------------------------------------------------------------------------------------------------------->
     <div class="row">
-        <div class="large-12 columns" id="player-container">
-            <table id="player-modal-table">
+        <div class="large-12 columns" id="player-modal-container">
+        <table id="player-modal-table">
                 <thead>
                 <tr>
                     <th id="player-icon">Spieler Avatar</th>
