--- a/training.html
+++ b/training.html
@@ -66,6 +66,26 @@
 <div class="row">
     <div class="large-12 columns" id="chart_div"></div>
 </div>
+
+
+<!-- player-in-training-container -------------------------------------------------------------------------------------------------------->
+<div class="row">
+    <div class="large-12 columns" id="training-container">
+        <table id="player-training-table">
+            <thead>
+            <tr>
+                <th id="pic-player">Bild</th>
+                <th id="name-player">Name</th>
+                <th id="training-sum">Gesamt TR</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+
 <!--Training  anlegen modal------------------------------------------------------------------------------------------------>
 <div id="modal-add-training" class="reveal-modal" data-reveal>
     <h2>Neues Training anlegen</h2>
